<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PopMyMovies_S1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie">PopMyMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_movie_title">Movie</string>
    <string name="content_desc_img_movie_poster">movie poster</string>
    <string name="default_movie_overview">Overview</string>
    <string name="total_rating"><xliff:g id="rating">%1$s</xliff:g>/10</string>
    <string name="default_release_date">01–01–2000</string>
    <string name="default_rating">10.0/10</string>
    <string name="default_movie_tagline">Tagline</string>
    <string name="heading_genres">Genres :</string>
    <string name="sort_by_popular">Popular</string>
    <string name="sort_by_top_rated">Top rated</string>
    <string name="trailer_heading">Trailers</string>
    <string name="sort_by_favourites">Favourites</string>
</resources>
