<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_between_two_layout"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.udacity.akkisathe2.popmymovies_s2.fragment.MovieDetailFragment">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/movie_title_color"
        android:padding="@dimen/heading_padding">

        <TextView
            android:id="@+id/txt_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_movie_title"
            android:textSize="@dimen/movie_heading" />


        <TextView
            android:id="@+id/txt_movie_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_movie_title"
            android:layout_centerHorizontal="true"
            android:text="@string/default_movie_tagline" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_movie_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rel_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_img_movie_poster"
                    android:adjustViewBounds="true"/>

                <ImageButton
                    android:id="@+id/btm_img_add_to_favourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_white_24dp"
                    android:layout_alignRight="@+id/img_movie_poster"
                    android:layout_alignBottom="@+id/img_movie_poster"
                    android:layout_alignEnd="@+id/img_movie_poster"
                    android:padding="@dimen/normal_padding"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_movie_poster_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_movie_poster"
                android:orientation="horizontal"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:id="@+id/txt_movie_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_release_date"
                    android:textSize="@dimen/normal_text_size" />
                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_movie_length"/>-->
                <TextView
                    android:id="@+id/txt_movie_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_movie_year"
                    android:layout_weight="1"
                    android:text="@string/default_rating"
                    android:textSize="@dimen/normal_text_size" />

                <ImageView
                    android:id="@+id/img_adult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/txt_movie_year"
                    android:layout_alignRight="@+id/txt_movie_year"
                    android:layout_below="@+id/txt_movie_year"
                    android:src="@drawable/adult"
                    android:visibility="gone" />


            </LinearLayout>

            <View
                android:id="@+id/sep_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ll_movie_poster_details"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sep_1"
                android:text="@string/default_movie_overview" />

            <View
                android:id="@+id/sep_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txt_movie_overview"
                android:background="@android:color/darker_gray" />
            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_genre_tags"
                android:layout_below="@+id/sep_2"
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_between_two_layout"
                >
                &lt;!&ndash;<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_genres"
                    android:id="@+id/txt_genre_heading"/>
                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:numColumns="auto_fit"
                    android:layout_toRightOf="@+id/txt_genre_heading"
                    android:layout_toEndOf="@+id/txt_genre_heading"
                    android:id="@+id/grid_genre_tags"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    />&ndash;&gt;
            </LinearLayout>
            <View
                android:id="@+id/sep_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txt_movie_overview"
                android:background="@android:color/darker_gray" />-->

            <RelativeLayout
                android:id="@+id/rel_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sep_2"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:id="@+id/txt_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tag_padding"
                    android:text="@string/trailer_heading"
                    android:textSize="@dimen/trailer_heading" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_right_arrow" />

            </RelativeLayout>

            <View
                android:id="@+id/sep_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rel_trailers"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:id="@+id/rel_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sep_3"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:id="@+id/txt_review_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tag_padding"
                    android:text="Reviews"
                    android:textSize="@dimen/trailer_heading" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_right_arrow" />

            </RelativeLayout>

            <View
                android:id="@+id/sep_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rel_reviews"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>
    </ScrollView>

    <!--<LinearLayout
        android:id="@+id/ll_review_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/movie_title_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_review_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="showReviews"
            android:padding="@dimen/tag_padding"
            android:text="Reviews"
            android:textSize="@dimen/trailer_heading" />

        <View
            android:id="@+id/sep_4"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/txt_mark_as_favourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="@dimen/tag_padding"
            android:text="Mark as favourite"
            android:textSize="@dimen/trailer_heading" />
    </LinearLayout>-->


</RelativeLayout>
